--- a/user-profile-service/src/main/resources/application.yml
+++ b/user-profile-service/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     username: ${spring_datasource_username}
     password: ${spring_datasource_password}
     driver-class-name: ${spring_datasource_driver_class_name}
+
+
+server:
+  port: 8081
