feat(user-profile-service): add Eureka client dependencies and configuration

--- a/user-profile-service/src/main/resources/application.yml
+++ b/user-profile-service/src/main/resources/application.yml
@@ -11,3 +11,43 @@ spring:
 
 server:
   port: 8081
+
+
+eureka:
+  client:
+    register-with-eureka: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
+  instance:
+    prefer-ip-address: true
+
+## Actuator configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        # Exposes monitoring for every endpoint
+        # through /actuator/metrics
+        include: "*"
+
+  endpoint:
+    health:
+      # Adds an endpoint to monitor service health
+      # /actuator/health
+      show-details: always
+
+  info:
+    env:
+      # Adds an endpoint to monitor environment info
+      # /actuator/env
+      enabled: true
+
+info:
+    app:
+      name: User profile Microservice
+      description: A microservice for the users profile operations
+      version: 1.0.0
+    company:
+      name: eco-tourism-marketplace
+    build:
+      time: ${BUILD_TIME:2024-08-21T12:30:00Z}
