chore(gateway): add keycloak and security dependencies

--- a/gateway-server/src/main/resources/application.yaml
+++ b/gateway-server/src/main/resources/application.yaml
@@ -11,6 +11,16 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          # Indicates the URL of the Keycloak endpoint that 
+          # provides the keys to verify JWT tokens        
+          # This is used within the subnet where the 
+          # microservices are deployed
+          # This URL does not need to be accessible from outside        
+          jwk-set-uri: http://localhost:9000/realms/marketplace-realm/protocol/openid-connect/certs
 
 eureka:
   client:
