feat(user-profile-service): integrate user-profile-service with config-server

--- a/user-profile-service/src/main/resources/application.yml
+++ b/user-profile-service/src/main/resources/application.yml
@@ -1,61 +1,4 @@
 spring:
   application:
     name: user-profile-service
-
-  datasource:
-    url: ${spring_datasource_url}
-    username: ${spring_datasource_username}
-    password: ${spring_datasource_password}
-    driver-class-name: ${spring_datasource_driver_class_name}
-
-
-server:
-  port: 8081
-
-
-eureka:
-  client:
-    register-with-eureka: true
-    service-url:
-      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
-  instance:
-    prefer-ip-address: true
-
-## Actuator configuration
-management:
-  endpoints:
-    web:
-      exposure:
-        # Exposes monitoring for every endpoint
-        # through /actuator/metrics
-        include: "*"
-
-  endpoint:
-    health:
-      # Adds an endpoint to monitor service health
-      # /actuator/health
-      show-details: always
-
-  info:
-    env:
-      # Adds an endpoint to monitor environment info
-      # /actuator/env
-      enabled: true
-
-info:
-    app:
-      name: User profile Microservice
-      description: A microservice for the users profile operations
-      version: 1.0.0
-    company:
-      name: eco-tourism-marketplace
-    build:
-      time: ${BUILD_TIME:2024-08-21T12:30:00Z}
-
-keycloak:
-  server-url: https://e73d150e7cc3.ngrok-free.app #keycloak url in virtual machine using ngrok
-  realm: marketplace-realm
-  client-id: admin-cli
-  client-secret: ""
-  username: admin         
-  password: admin        
+spring.config.import: "configserver:http://localhost:8888"
