--- a/user-profile-service/pom.xml
+++ b/user-profile-service/pom.xml
@@ -106,6 +106,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
