--- a/cart-service/src/main/resources/application.yml
+++ b/cart-service/src/main/resources/application.yml
@@ -8,6 +8,22 @@ spring:
       password: ${spring_datasource_password}
       driver-class-name: ${spring_datasource_driver_class_name}
 
+      # Message queue
+    cloud:
+      stream:
+        kafka:
+          binder:
+            # 9092 is the default port of Kafka
+            brokers: localhost:9092
+        bindings:
+          # https://docs.spring.io/spring-cloud-stream/reference/spring-cloud-stream/functional-binding-names.html
+          # Format: <method name>-<in or out>-<index>
+          # sendMessage: name of the method that sends the message
+          # out: because is a producer
+          # 0: Index of the binding. This makes sense when the same method sends to multiple queues
+          paymentsRequest-out-0:
+            destination: payments.request
+
 
 server:
     port: 8085
