--- a/config-server/src/main/resources/config/user-profile-service.yml
+++ b/config-server/src/main/resources/config/user-profile-service.yml
@@ -8,3 +8,16 @@ info:
     version: 1.0.0
   build:
     time: ${BUILD_TIME:2024-08-21T12:30:00Z}
+
+
+spring:
+  cloud:
+    stream:
+      bindings:
+        providerCreated-out-0:
+          destination: provider.created
+          content-type: application/json
+      kafka:
+        binder:
+          brokers: ${KAFKA_BOOTSTRAP_SERVERS:2.tcp.ngrok.io:17669}
+      defaultBinder: kafka
