--- a/service-catalog/pom.xml
+++ b/service-catalog/pom.xml
@@ -95,7 +95,15 @@
             <groupId>org.springframework.graphql</groupId>
             <artifactId>spring-graphql</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
+
+
     <dependencyManagement>
         <dependencies>
             <dependency>
