feat(graphql): add resolvers and fix config

--- a/config-server/src/main/resources/config/service-catalog.yml
+++ b/config-server/src/main/resources/config/service-catalog.yml
@@ -1,5 +1,15 @@
 server:
     port: 8082
+    
+spring:
+  graphql:
+    path: /graphql
+    graphiql:
+      enabled: true
+      path: /graphiql
+    playground:
+      enabled: true
+      path: /playground
 
 info:
     app:
