--- a/service-catalog/pom.xml
+++ b/service-catalog/pom.xml
@@ -91,10 +91,19 @@
             <artifactId>spring-dotenv</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <!-- SPRING GRAPHQL (oficial) -->
         <dependency>
             <groupId>org.springframework.graphql</groupId>
             <artifactId>spring-graphql</artifactId>
         </dependency>
+
+        <!-- GRAPHQL PLAYGROUND para Boot 3 -->
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>playground-spring-boot-starter</artifactId>
+            <version>11.1.0</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
