--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>3.0.0</version>
+		</dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
