--- a/service-review-questions/service-review-questions/pom.xml
+++ b/service-review-questions/service-review-questions/pom.xml
@@ -86,6 +86,10 @@
             <groupId>org.springframework.graphql</groupId>
             <artifactId>spring-graphql</artifactId>
         </dependency>
+		<dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
