chore(yml): add publisher and consumer configuration

--- a/config-server/src/main/resources/config/service-review-questions.yml
+++ b/config-server/src/main/resources/config/service-review-questions.yml
@@ -10,3 +10,12 @@ info:
       name: eco-tourism-marketplace
     build:
       time: ${BUILD_TIME:2024-09-19T12:30:00Z}
+
+spring:
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:2.tcp.ngrok.io:17669}
+    consumer:
+      group-id: service-review-questions
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
