--- a/config-server/src/main/resources/config/service-catalog.yml
+++ b/config-server/src/main/resources/config/service-catalog.yml
@@ -20,3 +20,14 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  
+  cloud:
+    stream:
+      bindings:
+        serviceCreated-out-0:   
+          destination: service.created
+          content-type: application/json
+      kafka:
+        binder:
+          brokers: ${KAFKA_BOOTSTRAP_SERVERS:2.tcp.ngrok.io:17669}
+      defaultBinder: kafka
