--- a/config-server/src/main/resources/config/user-profile-service.yml
+++ b/config-server/src/main/resources/config/user-profile-service.yml
@@ -17,6 +17,9 @@ spring:
         providerCreated-out-0:
           destination: provider.created
           content-type: application/json
+        userCreated-out-0:       
+          destination: user.created
+          content-type: application/json
       kafka:
         binder:
           brokers: ${KAFKA_BOOTSTRAP_SERVERS:2.tcp.ngrok.io:17669}
