--- a/Payment-Service/Payment-Service/pom.xml
+++ b/Payment-Service/Payment-Service/pom.xml
@@ -52,6 +52,11 @@
 			<version>4.1.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.0.4</version>
+		</dependency>
+		<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
             <version>2023.0.3</version> <!-- ejemplo -->
