fix(yml): fig configutarion problem

--- a/service-review-questions/service-review-questions/src/main/resources/application.yml
+++ b/service-review-questions/service-review-questions/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
   application:
     name: service-review-questions
-spring.config.import: "configserver:http://localhost:8888"
+  config:
+    import: "configserver:http://localhost:8888"
