chore (pom): update each microservice name for maven package

--- a/Payment-Service/Payment-Service/pom.xml
+++ b/Payment-Service/Payment-Service/pom.xml
@@ -126,6 +126,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>payment-Service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
