--- a/service-catalog/pom.xml
+++ b/service-catalog/pom.xml
@@ -133,6 +133,7 @@
         </dependencies>
     </dependencyManagement>
     <build>
+        <finalName>service-catalog</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
