--- a/user-profile-service/pom.xml
+++ b/user-profile-service/pom.xml
@@ -178,6 +178,7 @@
 	</dependencyManagement>
 
 	<build>
+	<finalName>user-profile-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
