--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -90,6 +90,7 @@
 	</dependencyManagement>
 
     <build>
+        <finalName>gateway-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
