--- a/service-review-questions/service-review-questions/pom.xml
+++ b/service-review-questions/service-review-questions/pom.xml
@@ -98,6 +98,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>service-review-questions</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
