--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,22 @@ services:
     networks:
       - eco-tourism-marketplace-network
 
+  api-gateway:
+    build:
+      context: ./gateway-server
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    depends_on:
+      - config-server
+      - eureka-server
+    environment:
+      - CONFIG_SERVER_URL
+      - EUREKA_SERVER_URL
+    networks:
+      - eco-tourism-marketplace-network
+
+
 
 networks:
   eco-tourism-marketplace-network:
