--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -113,20 +113,11 @@
 			<version>4.0.4</version>
 		</dependency>
 
-		<dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
-            <version>2.8.5</version>
-        </dependency>
+		
 	</dependencies>
 
 	<build>
-		<finalName>payment-Service</finalName>
+		<finalName>payment-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
