feat: implement APIs, pending fix for Kafka consumer/producer issues

--- a/config-server/src/main/resources/config/service-catalog.yml
+++ b/config-server/src/main/resources/config/service-catalog.yml
@@ -29,6 +29,9 @@ spring:
         binder:
           brokers: ${KAFKA_BOOTSTRAP_SERVERS:2.tcp.ngrok.io:17669}
       defaultBinder: kafka
+weather:
+  api:
+    key: eb5f81a5ddc6cba0c677fb69bc2f6e00
 
 info:
   app:
