--- a/service-catalog/pom.xml
+++ b/service-catalog/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>playground-spring-boot-starter</artifactId>
             <version>11.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
 
