--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -13,5 +13,5 @@ spring:
           group: payment-service-group
       kafka:
         binder:
-          brokers: ${KAFKA_BOOTSTRAP_SERVERS:2.tcp.ngrok.io:17669}   
-spring.config.import: "configserver:http://config-server:8888"
+          brokers: ${KAFKA_BOOTSTRAP_SERVERS:4.tcp.ngrok.io:18305}   
+spring.config.import: "optional:configserver:http://config-server:8888"
